--- a/index.html
+++ b/index.html
@@ -51,37 +51,34 @@
                     <img src="images/brand-logo.png" alt="logo">
                 </div>
                 <ul class="contact-number navbar-nav">
-                    <li>Call us: <strong class="clr-black">+21261404140</strong></li>
-                </ul>
-                <div>
-                    <i class="ml-5 fab fa-facebook-f"></i>
-                    <i class="ml-5 fab fa-instagram"></i>
-                    <i class="ml-5 fab fa-twitter"></i>
-                </div>
-                <!-- Header Contacts -->
-                    <!-- Search -->
-                    <div class="search">
+                    <li class="hideon-sm">Call us: <strong class="clr-black">+21261404140</strong></li>
+                    <li class="hideon-sm px-4">
+                        <i class="ml-5 fab fa-facebook-f"></i>
+                        <i class="ml-5 fab fa-instagram"></i>
+                        <i class="ml-5 fab fa-twitter"></i>
+                    </li>
+                    <li class="search pr-2">
                         <input type="text" placeholder="search" />
                         <div class="symbol">
                             <svg class="lens">
                                 <use xlink:href="#lens" />
                             </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" style=" display: none;">
+                                <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20  20" id="lens">
+                                    <path d="M15.656,13.692l-3.257-3.229c2.087-3.079,1.261-7.252-1.845-9.321c-3.106-2.068-7.315-1.25-9.402,1.83
+              s-1.261,7.252,1.845,9.32c1.123,0.748,2.446,1.146,3.799,1.142c1.273-0.016,2.515-0.39,3.583-1.076l3.257,3.229
+              c0.531,0.541,1.404,0.553,1.95,0.025c0.009-0.008,0.018-0.017,0.026-0.025C16.112,15.059,16.131,14.242,15.656,13.692z M2.845,6.631
+              c0.023-2.188,1.832-3.942,4.039-3.918c2.206,0.024,3.976,1.816,3.951,4.004c-0.023,2.171-1.805,3.918-3.995,3.918
+              C4.622,10.623,2.833,8.831,2.845,6.631L2.845,6.631z" />
+                                </symbol>
+                            </svg>
                         </div>
-                    </div>
-                    <!-- SVG -->
-                    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-                        <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20  20" id="lens">
-                            <path d="M15.656,13.692l-3.257-3.229c2.087-3.079,1.261-7.252-1.845-9.321c-3.106-2.068-7.315-1.25-9.402,1.83
-      s-1.261,7.252,1.845,9.32c1.123,0.748,2.446,1.146,3.799,1.142c1.273-0.016,2.515-0.39,3.583-1.076l3.257,3.229
-      c0.531,0.541,1.404,0.553,1.95,0.025c0.009-0.008,0.018-0.017,0.026-0.025C16.112,15.059,16.131,14.242,15.656,13.692z M2.845,6.631
-      c0.023-2.188,1.832-3.942,4.039-3.918c2.206,0.024,3.976,1.816,3.951,4.004c-0.023,2.171-1.805,3.918-3.995,3.918
-      C4.622,10.623,2.833,8.831,2.845,6.631L2.845,6.631z" />
-                        </symbol>
-                    </svg>
-
-                <div style="padding: 15px 0;">
-                    <a href="##" id="msbo"><i class="ic fa fa-bars"></i></a>
-                </div>
+                    </li>
+                    
+                    <li>
+                        <a href="##" id="msbo"><i class="ic fa fa-bars"></i></a>
+                    </li>
+                </ul>
                 <!--msb: main sidebar-->
                 <div class="msb" id="msb">
                     <nav class="navbar navbar-default" role="navigation">
@@ -160,27 +157,33 @@
                 <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
                     <img class="card-img-top" src="images/service1.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
-                      <h5 class="card-title">Service Exemple</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae numquam modi rerum perspiciatis facilis provident aspernatur nobis, mollitia autem quaerat</p>
-                      <a href="#" class="btn btn-primary text-center">Go somewhere</a>
+                        <h5 class="card-title">Service Exemple</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
+                            numquam modi rerum perspiciatis facilis provident aspernatur nobis, mollitia autem quaerat
+                        </p>
+                        <a href="#" class="btn btn-primary text-center">Go somewhere</a>
                     </div>
-                  </div>
-                  <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
+                </div>
+                <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
                     <img class="card-img-top" src="images/service2.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
-                      <h5 class="card-title">Service Exemple</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae numquam modi rerum perspiciatis facilis provident aspernatur nobis, mollitia autem quaerat</p>
-                      <a href="#" class="btn btn-primary text-center">Go somewhere</a>
+                        <h5 class="card-title">Service Exemple</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
+                            numquam modi rerum perspiciatis facilis provident aspernatur nobis, mollitia autem quaerat
+                        </p>
+                        <a href="#" class="btn btn-primary text-center">Go somewhere</a>
                     </div>
-                  </div>
-                  <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
+                </div>
+                <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
                     <img class="card-img-top" src="images/service3.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
-                      <h5 class="card-title">Service Exemple</h5>
-                      <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae numquam modi rerum perspiciatis facilis provident aspernatur nobis, mollitia autem quaerat</p>
-                      <a href="#" class="btn btn-primary ">Go somewhere</a>
+                        <h5 class="card-title">Service Exemple</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
+                            numquam modi rerum perspiciatis facilis provident aspernatur nobis, mollitia autem quaerat
+                        </p>
+                        <a href="#" class="btn btn-primary ">Go somewhere</a>
                     </div>
-                  </div>
+                </div>
             </div>
         </div>
     </section>
@@ -267,7 +270,7 @@
         </div>
     </section>
 
-    
+
 
     <!-- Portfolio Section
     ================================================== -->
