--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <ul class="contact-number navbar-nav">
                     <li class="hideon-sm">Call us: <strong class="clr-black">+21261404140</strong></li>
-                    <li class="hideon-sm px-4">
+                    <li class="hideon-sm px-5">
                         <i class="ml-4 fab fa-facebook-f"></i>
                         <i class="ml-4 fab fa-instagram"></i>
                         <i class="ml-4 fab fa-twitter"></i>
@@ -91,11 +91,16 @@
                                         <img class='m-2'src="images/brand-logo.png" width='140' height="40" alt="Logo">
                                     </a>
                                 </div>
+            
 
                             </div>
-
+                
                         </div>
-
+                        <ul class="sidebar-socials">
+                            <i class="mx-2 fab fa-facebook-f"></i>
+                            <i class="mx-4  fab fa-instagram"></i>
+                            <i class="mx-2  fab fa-twitter"></i>
+                        </ul>
                         <!-- Main Menu -->
                         <div class="side-menu-container">
                             <ul class="nav navbar-nav">
@@ -154,8 +159,8 @@
         <div class="container">
             <small class="small-line">Nos Services</small>
             <div class="card__collection row clear-fix">
-                <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
-                    <img class="card-img-top" src="images/service1.jpg" height='250' alt="Card image cap">
+                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: 18rem;">
+                    <img class="card-img-top img-fluid" src="images/service1.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title">Service Exemple</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
@@ -164,8 +169,8 @@
                         <a href="#" class="btn btn-primary text-center">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
-                    <img class="card-img-top" src="images/service2.jpg" height='250' alt="Card image cap">
+                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: 18rem;">
+                    <img class="card-img-top img-fluid" src="images/service2.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title">Service Exemple</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
@@ -174,8 +179,8 @@
                         <a href="#" class="btn btn-primary text-center">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card col-lg-4 col-sm-12 col-md-4" style="width: 18rem;">
-                    <img class="card-img-top" src="images/service3.jpg" height='250' alt="Card image cap">
+                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: 18rem;">
+                    <img class="card-img-top img-fluid" src="images/service3.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title">Service Exemple</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
