refined card responsiveness

--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <div class="container">
             <small class="small-line">Nos Services</small>
             <div class="card__collection row clear-fix">
-                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: 18rem;">
-                    <img class="card-img-top img-fluid" src="images/service1.jpg" height='250' alt="Card image cap">
+                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: auto;">
+                    <img class="card-img-top" src="images/service4.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title">Service Exemple</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
@@ -172,8 +172,8 @@
                         <a href="#" class="btn btn-primary text-center">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: 18rem;">
-                    <img class="card-img-top img-fluid" src="images/service2.jpg" height='250' alt="Card image cap">
+                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: auto;">
+                    <img class="card-img-top" src="images/service2.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title">Service Exemple</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
@@ -182,8 +182,8 @@
                         <a href="#" class="btn btn-primary text-center">Go somewhere</a>
                     </div>
                 </div>
-                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: 18rem;">
-                    <img class="card-img-top img-fluid" src="images/service3.jpg" height='250' alt="Card image cap">
+                <div class="card col-lg-4 col-sm-12 col-md-12" style="width: auto;">
+                    <img class="card-img-top" src="images/service3.jpg" height='250' alt="Card image cap">
                     <div class="card-body text-center">
                         <h5 class="card-title">Service Exemple</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure molestiae
