--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                     Dream come True With <br>
                     Our Talented Architect<br>
-                    <a class="link arrow-icon" href="#">Browse Projects
+                    <a class="link mt-5 rounded arrow-icon" href="#">Browse Projects
                         <i class="las la-arrow-right"></i>
                     </a>
 
