--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="row">
                         
                         
-                        <div class="col-sm-6 search">
+                        <div class="col-sm-6">
                             <a href="##" id="msbo"><i class="ic fa fa-bars"></i></a>
                         </div>
                     </div>
