commented console.log

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
         function handleMousePos(event) {
             let mouseClickWidth = event.clientX;
             if(mouseClickWidth >= 200 && !$('#msbo').is(event.target) && $('#msbo').has(event.target).length === 0) {
-                console.log(mouseClickWidth);
+                // console.log(mouseClickWidth);
                 $('#msb').addClass('hide');
             }
         }
