added smooth scrolling

--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
                         <div class="side-menu-container">
                             <ul class="nav navbar-nav">
 
-                                <li class='p-3'><a href="#aboutSection"><i class="fa fa-dashboard"></i> Home</a></li>
-                                <li class="active p-3"><a href="#"><i class="fa fa-puzzle-piece"></i> Blog</a></li>
-                                <li class='p-3'><a href="#contactSection"><i class="fa fa-heart"></i>About</a></li>
-                                <li class='p-3'><a href="#"><i class="fa fa-heart"></i>Contact</a></li>
+                                <li class='p-3'><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                                <li class="active p-3"><a href="#serviceSection"><i class="fa fa-puzzle-piece"></i> Service</a></li>
+                                <li class='p-3'><a href="#aboutSection"><i class="fa fa-heart"></i>About</a></li>
+                                <li class='p-3'><a href="#contactSection"><i class="fa fa-heart"></i>Contact</a></li>
 
                             </ul>
                         </div>
@@ -158,7 +158,7 @@
 
     </section> <!-- Promo Section End -->
 
-    <section class="services clearfix">
+    <section class="services clearfix" id="serviceSection">
         <div class="container">
             <small class="small-line">Nos Services</small>
             <div class="card__collection row clear-fix">
@@ -586,7 +586,7 @@
 
     <!-- Footer
     ================================================== -->
-    <footer class="footer">
+    <footer class="footer" id="contactSection">
         <div class="container">
 
             <!-- Footer Wrapper -->
