changed author and meta description : SEO

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="UTF-8">
-    <meta name="description" content="This theme was created for free use. Good Luck!">
-    <meta name="author" content="Daniel Krupnyy">
+    <meta name="description" content="Template for construction company">
+    <meta name="author" content="Ziad Sabillah">
 
     <!-- Mobile Specific Metas
     ================================================== -->
@@ -15,7 +15,7 @@
 
     <!-- Company Name
     ================================================== -->
-    <title>Building Company</title>
+    <title>LaCasa</title>
 
     <!-- CSS
     ================================================== -->
