added content partial

--- a/index.html
+++ b/index.html
@@ -201,15 +201,17 @@
             <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
                     <div class="section-title">
-                        <small class="small-line">About us</small>
+                        <small class="small-line">a propos de nous</small>
                         <h2>
-                            We Over 15 Years To Design Thousand Of Successful Dreamst
+                            LE PARTENAIRE DE TOUS VOS PROJETS
                         </h2>
                     </div>
                     <div class="about-content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolor, officia odit nulla
-                            sunt modi reprehenderit at tempore.
-                            Qui, officiis eveniet esse quisquam eos obcaecati autem labore impedit dolore ratione!</p>
+                        <p>Elle allie la sûreté d'un groupe financier à la souplesse d'une PME. 
+                            Pour que chaque chantier soit une réussite humaine et technique, nos équipes sont fédérées autour des mêmes valeurs</p>
+                            <p>Le respect des clients
+                                Une démarche qualité et environnementale
+                                Une éthique dans le management de nos personnels et dans la relations avec nos partenaires sous-traitants</p>
                         <a href="" class="link">Learn more
                             <i class="las la-arrow-right"></i>
                         </a>
