--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
                     Dream come True With <br>
                     Our Talented Architect<br>
-                    <a class="link mt-5 rounded arrow-icon" href="#">Browse Projects
+                    <a class="link mt-5 rounded arrow-icon" href="#portfolioSection">Browse Projects
                         <i class="las la-arrow-right"></i>
                     </a>
 
@@ -284,7 +284,7 @@
 
     <!-- Portfolio Section
     ================================================== -->
-    <section class="portfolio mt-5">
+    <section class="portfolio mt-5" id="portfolioSection">
 
         <!-- Portfolio Slider -->
         <div class="portfolio__slider">
