--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                     <div class="logo">
                         <img src="images/brand-logo.png" loading="lazy" alt="Logo">
                     </div>
-                    <button class="footer__submit popup_btn">Folow up</button>
+                    <button class="footer__submit popup_btn">Contact</button>
                 </div> <!-- Footer Block End -->
 
                 <!-- Footer Block -->
@@ -610,8 +610,7 @@
                         <a href="#" class="email">email@mail.com</a>
                         <a href="#" class="phone">+212 613313231</a>
                         <span class="address">123 Main Street, New York, NY 10030</span>
-                    </div>
-
+                    </div>  
                     <!-- Footer Socials -->
                     <div class="footer__socials">
                         <a href="#" class="icon-instagram"></a>
