added animation and refined css

--- a/index.html
+++ b/index.html
@@ -633,13 +633,13 @@
     <!-- Popup
     ================================================== -->
     <div class="popup_window">
-        <div class="popup_close">Close</div>
+        <div class="popup_close">Fermer</div>
         <!-- <span class="popup_text"> -->
-        Interested in our services? Just leave your phone number and the manager will call you back during the day.
+            Intéressé par nos services? Laissez simplement votre numéro de téléphone et le responsable vous rappellera dans la journée.
         </span>
         <form action="POST">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="phone" name="phone" placeholder="Your Phone" required>
+            <input type="text" name="name" placeholder="Nom" required>
+            <input type="phone" name="phone" placeholder="Tel" required>
             <input type="submit">
         </form>
     </div>
