--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <img src="images/brand-logo.png" loading="lazy" alt="logo">
                 </div>
                 <ul class="contact-number navbar-nav">
-                    <li class="hideon-sm">Call us: <strong class="clr-black">+21261404140</strong></li>
+                    <li class="hideon-sm"><i class='fas fa-phone'></i><strong class="clr-black">+21261404140</strong></li>
                     <li class="hideon-sm px-5">
                         <i class="ml-4 fab fa-facebook-f"></i>
                         <i class="ml-4 fab fa-instagram"></i>
@@ -220,9 +220,9 @@
                             Une démarche qualité et environnementale
                             Une éthique dans le management de nos personnels et dans la relations avec nos partenaires
                             sous-traitants</p>
-                        <a href="" class="link">Learn more
+                        <button href="" class="link btn-primary">Learn more
                             <i class="las la-arrow-right"></i>
-                        </a>
+                        </button>
                     </div>
 
                 </div>
@@ -248,7 +248,7 @@
                     <div class="funfact-content container">
                         <div class="section-title">
                             <small class="small-line">
-                                FUN FACT
+                                PROJETS
                             </small>
                             <h2>
                                 Nos réalisations
@@ -614,9 +614,9 @@
 
                     <!-- Footer Contacts -->
                     <div class="footer__contacts">
-                        <a href="#" class="email">email@mail.com</a>
-                        <a href="#" class="phone">+212 613313231</a>
-                        <span class="address">123 Main Street, New York, NY 10030</span>
+                        <a href="#" class="email">email@exemple.com</a>
+                        <a href="#" class="phone">+212 XXXXXXXX</a>
+                        <span class="address">Rabat, Maroc</span>
                     </div>
                     <!-- Footer Socials -->
                     <div class="footer__socials">
@@ -709,7 +709,6 @@
                         .outerHeight();
                     var bottom_of_screen = $(window).scrollTop() + $(window).innerHeight();
                     var top_of_screen = $(window).scrollTop();
-
                     if ((bottom_of_screen > top_of_element) && (top_of_screen <
                             bottom_of_element)) {
                         // the element is visible, do something
